trunk/Archive2/2e/4d0ce3fd64b31a/output
main.cpp:9:1: error: too few arguments provided to function-like macro invocation
BAR((1, 2, 3))
^
main.cpp:7:46: note: expanded from macro 'BAR'
#define BAR(tup) FOO(BOOST_PP_TUPLE_ENUM(tup))
                                             ^
main.cpp:4:9: note: macro 'FOO' defined here
#define FOO(a, b, c) a-b-c
        ^







FOO
1 error generated.
